Rename user point log service and API; add endpoint to retrieve user points log by address
