# src/app/router/router_v1.go
@@ -20,4 +20,9 @@ func Bind(r *gin.Engine, ctx *ctx.Context) {
 		v.GET("/user_balance/:address", userBalanceApi.GetBalanceByAddress)
 	}
 
+	{
+		pointLogApi := api.NewUserPointsLogApi()
+		v.GET("/user_points_log/:address", pointLogApi.ListByAddress)
+	}
+
 }
